Acceptance test configured and one test created. README.md updated

--- a/src/Infrastructure/Delivery/Web/Presentation/TwigTemplates/add-question-form.html.twig
+++ b/src/Infrastructure/Delivery/Web/Presentation/TwigTemplates/add-question-form.html.twig
@@ -30,6 +30,6 @@
         <input type="text" name="answerPrompt[]" required class="form-control" />
     </div>
 
-    <input type="submit" class="btn btn-primary">
+    <input type="submit" class="btn btn-primary" id="btn_create_question">
 </form>
 {% endblock %}
